// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should allow hiding 1`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="appear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Adam Hall
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={150}
            />
            <text
              className="username"
              x="60"
              y={210}
            >
              Caroline Hall
            </text>
          </g>
        </g>
        <g
          id="history"
        />
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should allow hiding 2`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="appear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Adam Hall
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={150}
            />
            <text
              className="username"
              x="60"
              y={210}
            >
              Caroline Hall
            </text>
          </g>
        </g>
        <g
          id="history"
        />
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should allow shrinking 1`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="appear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Caroline Hall
            </text>
          </g>
        </g>
        <g
          id="history"
        >
          <circle
            className="point"
            cx={800}
            cy={400}
            r="10"
          />
        </g>
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should allow shrinking 2`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="disappear"
          id="users"
        />
        <g
          id="history"
        >
          <circle
            className="point"
            cx={800}
            cy={400}
            r="10"
          />
          <circle
            className="point"
            cx={-400}
            cy={399.99999999183456}
            r="10"
          />
        </g>
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should allow users to be set okay 1`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="disappear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Test person 1
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={150}
            />
            <text
              className="username"
              x="60"
              y={210}
            >
              Test person 2
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={240}
            />
            <text
              className="username"
              x="60"
              y={300}
            >
              Test person 3
            </text>
          </g>
        </g>
        <g
          id="history"
        />
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should show the component 1`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="appear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Adam Hall
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={150}
            />
            <text
              className="username"
              x="60"
              y={210}
            >
              Caroline Hall
            </text>
          </g>
        </g>
        <g
          id="history"
        />
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;

exports[`Should show the component 2`] = `
<svg
  id="stage"
  xmlns="http://www.w3.org/2000/svg"
>
  <svg
    height={800}
    id="stage"
    width={800}
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <g>
        <g>
          <rect
            className="not-in-focus"
            height="100%"
            id="chaos"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            width="100%"
          />
          <text
            className="area-label"
            id="label-chaos"
            textAnchor="middle"
            x="50%"
            y="20"
          >
            chaos
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="33%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="20%"
          >
            stretch
          </text>
        </g>
        <g>
          <circle
            className="not-in-focus"
            cx="50%"
            cy="50%"
            height="50%"
            id="stretch"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            r="15%"
            width="50%"
          />
          <text
            className="area-label"
            id="label-stretch"
            textAnchor="middle"
            x="50%"
            y="50%"
          >
            comfort
          </text>
        </g>
        <g
          className="appear"
          id="users"
        >
          <g
            className="user-group"
          >
            <rect
              className="in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={60}
            />
            <text
              className="username"
              x="60"
              y={120}
            >
              Adam Hall
            </text>
          </g>
          <g
            className="user-group"
          >
            <rect
              className="not-in-focus"
              height="90"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              width="800"
              x="0"
              y={150}
            />
            <text
              className="username"
              x="60"
              y={210}
            >
              Caroline Hall
            </text>
          </g>
        </g>
        <g
          id="history"
        />
      </g>
      ,
      <button
        id="show-tuckman"
      >
        show tuckman
      </button>
      ,
      <button
        id="hide-tuckman"
      >
        hide tuckman
      </button>
    </g>
  </svg>
</svg>
`;
